src/path/log/build_2022-12-19_10-58-30/path/stderr.log
  File "/home/jjaffe27/dev_f1tenth_ws/src/path/install/path/lib/python3.8/site-packages/path/waypoints.py", line 26
    print data.twist.twist.linear.x
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(data.twist.twist.linear.x)?

